src/styles/App.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
@import url("https://fonts.googleapis.com/css?family=Montserrat");
@import url("https://fonts.googleapis.com/css?family=Orbitron");
@import url("https://fonts.googleapis.com/css?family=Pixelify+Sans");

.playfair-text {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.number {
  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.video-background {
  z-index: 0;
  position: relative;
  height: 90vh;
  overflow: hidden;
  background: url('https://res.cloudinary.com/dukfn2auq/image/upload/f_auto,q_30/v1724344680/zpeuyljbohnycvuryvhr.webp') no-repeat center fixed;
  background-size: cover;
  width: 100%;
  max-height: 1080px;
  min-height: 650px;
}


.top-margin-spotify {
  background-color: black;
}

.App-nav {
  background-color: rgba(255, 255, 255, 0.8);
  font-family: "Playfair Display", serif;
  font-weight: bold;
  font-size: 1.1em !important;
  /* must fix padding (all padding)*/
  padding: .2em 5em .2em 5em !important;

}

.content-width {
  max-width: 800px;
}


h1.title-lg {
  font-size: 50px;
  font-weight: 500;
}

h3.title-sm {
  font-size: 30px;
  font-weight: 600;
}

.title-md,
h2.title-md {
  font-size: 40px;
  font-weight: 500;
}

p.subtitle-lg {
  font-size: 25px;
  font-weight: 500;
  margin: 0;
}

p.subtitle-md {
  font-size: 20px;
}

p.subtitle-small {
  font-size: 17px;
  font-weight: 600;
}

.text-p {
  font-size: 15px;
}

.text-muted {
  color: lightgray;
}

.experience-article {
  padding-left: 20px;
}

.experience-hover:hover {
  cursor: pointer;
}


.view-more-icon {
  opacity: 0;
  transform: translate(0.25rem, 0) rotate(0) scaleX(1) scaleY(1);
  transition: transform 0.3s ease, opacity 0.3s ease-in;
  --tw-rotate: 90deg;
}

.view-more-icon.clicked {
  transform: translate(0.25rem, 0) rotate(90deg) scaleX(1) scaleY(1);
}

.experience:hover .view-more-icon {
  opacity: 1;
}

.experience-article p {
  margin-top: 0;
  margin-bottom: 10px;
}

.contact {
  height: 400px;
}

.img-cont-lg {
  width: 200px;
  height: 200px;
}

#about {
  max-width: 600px;
}

.view-more-button {
  display: none !important;
}

.experience-right {
  justify-content: end;
  align-items: end;
}

.experience-logo {
  width: 42px;
  height: 42px;
}

.experience-desc-img {
  width: 150px !important;
}

.experience-desc-img-cover {
  width: 150px !important;
  height: 120px !important;
  object-fit: cover !important;
}

.experience-symbol {
  height: 42px;
}

#briefcase-img {
  width: 55px;
}

.overlay-video {
  z-index: 1;
  background: rgba(0, 0, 0, 0.25);
}

#video {
  position: fixed;
}


@media screen and (max-width: 800px) {

  #video {
    position: absolute;
  }

  .overlay-video {
    background: rgba(0, 0, 0, 0.25);
  }

  .video-background {
    background: url("https://res.cloudinary.com/dukfn2auq/image/upload/f_auto,q_30/v1724344680/zpeuyljbohnycvuryvhr.webp") no-repeat center;
    min-height: 575px;
    height: 80vh;
  }

  #briefcase-img {
    width: 50px !important;
  }

  .content-width {
    max-width: 100%;
    padding-left: 20px !important;
    padding-right: 20px !important;
  }

  h1.title-lg {
    font-size: 30px;
  }

  h3.title-sm {
    font-size: 24px;
  }

  .title-md,
  h2.title-md {
    font-size: 28px;
  }

  p.subtitle-md {
    font-size: 16px;
  }

  p.subtitle-lg {
    font-size: 20px;
  }

  /*  */

  p.subtitle-small {
    font-size: 14px;
    font-weight: 600;
  }

  .text-p {
    font-size: 12px;
  }

  .text-height-sm {
    line-height: 16px;
  }

  .img-cont-lg {
    width: 100px;
    height: 100px;
    flex-shrink: 0;
  }

  #about {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
  }

  #about h2 {
    font-size: 24px;
    height: 68px;
  }

  .view-more-icon {
    display: none;
  }

  .view-more-button {
    padding: 4px 8px !important;
    font-size: 12px !important;
    display: block !important;
    font-weight: bold !important;
    margin-top: 5px;
  }

  .experience-right {
    align-items: center !important;
  }

  .experience-logo {
    width: 36px;
    height: 36px;
  }

  .experience .subtitle-lg {
    line-height: 24px;
  }

  .experience-desc-img {
    width: 70px !important;
  }

  .experience-desc-img-cover {
    width: 50px !important;
    height: 50px !important;
    object-fit: cover !important;
  }

  .experience-img-list {
    flex-wrap: wrap;
  }

  .experience-symbol {
    margin-bottom: auto;
    height: auto !important;
    width: 70px !important;
  }

  #my-contact .subtitle-small {
    font-size: 12px;
  }

  .contact {
    height: 300px !important;
  }

  .extra-space {
    margin-top: 10px;
  }

}

#resume-card {
  margin-top: auto;
  padding-bottom: 28px;
}

#resume-card img {
  margin-left: -6px;
}

.bento-wrapper {
  padding: 0 20px;
}

.bento-box {
  height: 280px;
  width: 650px;
  gap: 8px;
  padding: 8px;
  color: black;
}



.bento-cup {
  text-decoration: none;
  color: black;
  padding: 20px;
  border-radius: 8px;
  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
}

.bento-cup:hover {
  cursor: pointer;
  color: black;
}

.bento-cup:hover .go-up-big {
  transform: translateY(-20px)
}

.bento-cup:hover .go-up {
  transform: translateY(-10px)
}

.go-up-big,
.go-up {
  transition: transform 0.3s ease;
}

.hover-overlay {
  border-radius: 8px;
  opacity: 0;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
  transition: opacity 0.6s ease;
}

.peer-overlay:hover .hover-overlay {
  opacity: 0.2;
}
/* ... */

